# math-arena

./: .editorconfig  .env.example  .gitignore  M0-M1_优化迭代6_答非所问修复.md  Makefile  README.md  VERSIONS.md  package.json  pnpm-lock.yaml
services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
services/api/alembic/: env.py
services/api/alembic/versions/: 1d7107084a02_enable_pgvector_columns_and_hnsw_indexes.py  e544b0fef0bd_initial_15_tables.py
services/api/app/: __init__.py  config.py  main.py
services/api/app/domains/: __init__.py
services/api/app/domains/classroom/: __init__.py  router.py
services/api/app/domains/ops/: __init__.py  router.py
services/api/app/gateway/: __init__.py  agent_router.py  auth.py  auth_router.py  jwt.py  redis.py  schemas.py
services/api/app/kernel/: __init__.py  context.py  guard.py  memory.py  rag.py  router.py
services/api/app/models/: __init__.py  ai_call.py  base.py  chunk.py  class_.py  class_member.py  conversation.py  database.py  episodic_memory.py  event.py  knowledge_doc.py  knowledge_point.py  message.py  role_binding.py  skill.py  skill_run.py  user.py  user_profile.py
services/api/app/providers/: __init__.py  audit.py  base.py  deepseek.py  embedding.py  http.py  reranker.py  router.py  spark.py
services/api/app/skills/: __init__.py  base.py  chat.py  registry.py
services/api/app/skills/chat/: main.py
services/api/app/workers/: __init__.py
services/api/eval/: __init__.py  eval_suite.py  rag_30.json  router_30.json  run_eval.py
services/api/scripts/: __init__.py  seed_knowledge.py
services/api/tests/: __init__.py  conftest.py  test_api_integration.py  test_auth.py  test_classroom.py  test_health.py  test_kernel.py  test_m1_fixes.py  test_models.py  test_providers.py
(+41 files in other folders)
